--- a/src/IvyFEMProtoApp/IvyFEMProtoApp/MainWindow.xaml
+++ b/src/IvyFEMProtoApp/IvyFEMProtoApp/MainWindow.xaml
@@ -287,6 +287,9 @@
                         <MenuItem Header="PC Waveguide(PML)(Square Lattice)(Time Domain)" Click="SquareLatticePCWaveguidePMLTD1Btn_Click"/>
                         <MenuItem Header="PC Waveguide(PML)(Triangle Lattice)(Time Domain)" Click="TriangleLatticePCWaveguidePMLTD1Btn_Click"/>
                     </MenuItem>
+                    <MenuItem Header="Eddy Current(Time Domain)">
+                        <MenuItem Header="Eddy Current(1)(Time Domain)" Click="EddyCurrentTD1Btn_Click"/>
+                    </MenuItem>
                 </MenuItem>
                 <MenuItem Header="Fluid">
                     <MenuItem Header="Fluid">
