--- a/src/IvyFEMProtoApp/IvyFEMProtoApp/MainWindow.xaml
+++ b/src/IvyFEMProtoApp/IvyFEMProtoApp/MainWindow.xaml
@@ -217,10 +217,10 @@
                         <MenuItem Header="Elastic (Waveguide)(SH)(1)" Click="ElasticSHWaveguide1Btn_Click"/>
                         <MenuItem Header="Elastic (Waveguide)(SH)(2)" Click="ElasticSHWaveguide2Btn_Click"/>
                     </MenuItem>
-                    <!--<MenuItem Header="Elastic (Waveguide)(Lamb)(ABC)">
+                    <MenuItem Header="Elastic (Waveguide)(Lamb)(ABC)">
                         <MenuItem Header="Elastic (Waveguide)(Lamb)(ABC)(0)" Click="ElasticLambWaveguideFirstOrderABC0Btn_Click"/>
                         <MenuItem Header="Elastic (Waveguide)(Lamb)(ABC)(1)" Click="ElasticLambWaveguideFirstOrderABC1Btn_Click"/>
-                    </MenuItem>-->
+                    </MenuItem>
                     <MenuItem Header="Elastic (Waveguide)(Lamb)(PML)">
                         <!--
                         <MenuItem Header="Elastic (Waveguide)(Lamb)(PML)(0-0)" Click="ElasticLambWaveguidePML0_0Btn_Click"/>
